--- a/src/components/forms/WrappedInput/WrappedInput.module.scss
+++ b/src/components/forms/WrappedInput/WrappedInput.module.scss
@@ -1,30 +1,39 @@
-.label{
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-  }
-  .span{
-    text-transform: capitalize;
-  }
-  .input{
-    width: 100%;
-    padding: 9px;
-    margin-bottom: 5px;
-    background-color: #eee;
-    border: none;
-    border-radius: 2px;
-  }
-  .error{
-    position: absolute;
-    right: 10%;
-    top:40%;
-    padding: 5px;
-    background-color: #ff5555cc;
-    font-size: 0.7em;
-  }
-  .valid{
-    color: green;
-  }
-  .invalid{
-    color: red;
-  }
+.label {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.span {
+  text-transform: capitalize;
+}
+.input {
+  width: 100%;
+  padding: 9px;
+  margin-bottom: 5px;
+  background-color: #eee;
+  border: 2.5px solid transparent;
+  border-radius: 2px;
+  outline: none;
+}
+.error {
+  width: 130px;
+  height: 37px;
+  position: absolute;
+  right: -30%;
+  top: -80%;
+  padding: 5px;
+  background-image: url(../../../../public/static/images/pngfind.com-text-message-png-tumblr-6743556.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 10;
+  text-align: center;
+  line-height: 25px;
+  font-size: 0.7em;
+}
+.valid {
+  color: green;
+}
+.invalid {
+  color: red;
+  border: 2.5px solid red;
+}
