--- a/src/components/forms/WrappedInput/WrappedInput.module.scss
+++ b/src/components/forms/WrappedInput/WrappedInput.module.scss
@@ -10,6 +10,7 @@
   width: 100%;
   padding: 9px;
   margin-bottom: 5px;
+  margin-top: 0.3em;
   background-color: #eee;
   border: 2.5px solid transparent;
   border-radius: 2px;
